syntax = "proto3";
package gochess;

message Position {
    string fen = 1;
}

message Coordinate {
    int32 row = 1;
    int32 col = 2;
}

message MoveMessage {
    Coordinate from = 1;
    Coordinate to = 2;
    bool isPromotion = 3;
    string pieceName = 4;
}

message MoveInPosition {
    Position position = 1;
    MoveMessage move = 2;
}

message MoveLegal {
    Position position = 1;
    string prettyMove = 2;
    bool legal = 3;
}

message RequestPgnParse {
    string pgn = 1;
}

message PgnDisplay {
    string fen = 1;
    string comment = 2;
    repeated PgnDisplay next = 3;
}

option go_package = "gochess/";